--- a/CSS_advanced/styles/4-style.css
+++ b/CSS_advanced/styles/4-style.css
@@ -5,8 +5,8 @@
     --color-light-grey: #f3f3f3;
     --color-dark-grey: #353535;
     --text-color: var(--color-black);
-    -font-family-base: "Helvetica Neue, Helvetica, Arial, sans-serif";
-  --font-family-title: "Helvetica Neue, Helvetica, Arial, sans-serif";
+    --font-family-base: "Helvetica Neue, Helvetica, Arial, sans-serif";
+    --font-family-title: "Helvetica Neue, Helvetica, Arial, sans-serif";
 }
 
 html {
@@ -14,8 +14,8 @@ html {
 }
 
 body {
-color: var(--text-color);
-font-family: var(--font-family-base);
+    color: var(--text-color);
+    font-family: var(--font-family-base);
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -23,17 +23,17 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 a {
-color: var(--text-color);
+    color: var(--text-color);
 }
 
 .visually-hidden {
-display: none;
+    display: none;
 }
 
 .card-category {
-color: var(--color-primary);
+    color: var(--color-primary);
 }
 
 .section-tagline {
-color: var(--color-primary);
+    color: var(--color-primary);
 }
