--- a/CSS_advanced/styles/5-style.css
+++ b/CSS_advanced/styles/5-style.css
@@ -22,6 +22,8 @@ html {
 body {
     color: var(--text-color);
     font-family: var(--font-family-base);
+    --font-size: vae(--font-size-medium
+    )
 }
 
 h1, h2, h3, h4, h5, h6 {
