--- a/CSS_advanced/styles/5-style.css
+++ b/CSS_advanced/styles/5-style.css
@@ -16,13 +16,13 @@
 
 html {
     scroll-behavior: smooth;
-    --font-size: 62.5%;
+    font-size: 62.5%;
 }
 
 body {
     color: var(--text-color);
     font-family: var(--font-family-base);
-    --font-size: vae(--font-size-medium
+    font-size: var(--font-size-medium
     )
 }
 
