Fix: declaration of universal box

--- a/CSS_advanced/styles/15-style.css
+++ b/CSS_advanced/styles/15-style.css
@@ -377,9 +377,9 @@ display: none;
     --section-title-color: var(--color-black);
 }
 
-.box {
-    box-sizing: content-box;
-}
+*, *:before, *:after {
+    box-sizing: border-box;
+  }
 
 html {
     scroll-behavior: smooth;
