--- a/CSS_advanced/styles/18-style.css
+++ b/CSS_advanced/styles/18-style.css
@@ -386,7 +386,7 @@ display: none;
     --nav-item-font-size: var(--font-size-medium);
     --nav-item-letter-spacing: 0.04rem;
     --nav-item-display: inline-block;
-    --nav-item-margin: 0 0 3rem;
+    --nav-item-margin: 0 0 3rem 0;
     --nav-item-link-hover: var(--color-primary);
 }
 
@@ -473,7 +473,7 @@ a:active {
     text-align: center;
 }
 
-.nav.nav-item {
+.nav .nav-item {
     font-family: var(--nav-item-font-family);
     font-weight: var(--nav-item-font-weight);
     font-size: var(--nav-item-font-size);
@@ -482,12 +482,12 @@ a:active {
     margin: var(--nav-item-margin);
 }
 
-.nav.nav-link {
+.nav .nav-link {
     display: block;
     padding: 0.5rem 1rem;
 }
 
-.nav.nav-link:hover {
+.nav .nav-link:hover {
     color: var(--nav-item-link-hover);
   }
 
