--- a/CSS_advanced/styles/19-style.css
+++ b/CSS_advanced/styles/19-style.css
@@ -530,11 +530,11 @@ ul.row {
 }
 
 .footer-copyright {
-    margin: none;
+    margin: 0;
     font-size: var(--font-size-small);
     color: var(--text-color)
 }
 
-.ul .footer {
+.footer ul {
     text-align: right;
 }
