--- a/CSS_advanced/styles/25-style.css
+++ b/CSS_advanced/styles/25-style.css
@@ -392,12 +392,12 @@ display: none;
     --button-display: inline-block;
     --button-padding: 1.5rem 3rem;
     --button-border: 0.2rem solid var(--color-primary);
-    --button-color: color-black;
+    --button-color: var(--color-black);
     --button-text-decoration: none;
     --button-font-size: font-size-large;
-    --button-hover-color: color-white;
+    --button-hover-color: var(--color-white);
     --button-hover-text-decoration: none;
-    --button-hover-background: color-primary;
+    --button-hover-background: var(--color-primary);
 }
 
 [data-section-theme="dark"] {
