--- a/CSS_advanced/styles/26-style.css
+++ b/CSS_advanced/styles/26-style.css
@@ -491,13 +491,13 @@ a:active {
 
 .card-testimonial .card-avatar {
     border-radius: 50%;
-    width: 10em;
-    height: 10em;
+    width: 10rem;
+    height: 10rem;
 }
 
 .card-testimonial .card-quote cite {
     display: block;
-    padding-top: 1em;
+    padding-top: 1rem;
     color: var(--color-primary);
 }
 
