--- a/CSS_advanced/styles/27-style.css
+++ b/CSS_advanced/styles/27-style.css
@@ -585,7 +585,7 @@ ul.row {
     background-size: 90rem auto;
 }
 
-.section-hero .section-item {
+.section-hero .section-title {
     margin-bottom: 5rem;
 }
 
