--- a/flexbox/4-styles.css
+++ b/flexbox/4-styles.css
@@ -185,11 +185,12 @@
   }
   ul.row {
     margin: -1rem;
+    padding: 0;
     list-style: none;
   }
   
   [class*='col-'] {
-    padding: 0.5rem;
+    margin: 1rem;
   }
   
   .col-1-3 {
