--- a/flexbox/100-styles.css
+++ b/flexbox/100-styles.css
@@ -575,7 +575,7 @@
     width: 100%;
   }
 
-  .post-content:first-child {
+  .post-content p:first-child {
     font-size: var(--font-size-x-large);
   }
 
